# efm32jg-pacs

./: CHANGELOG.md  README.md
pacs/efm32jg12b/: Cargo.toml  README.md  build.rs
pacs/efm32jg12b/efm32jg12b500/: Cargo.toml
pacs/efm32jg12b/src/: lib.rs
pacs/efm32jg12b/src/efm32jg12b500/: cmu.rs  emu.rs  etm.rs  gpio.rs  idac0.rs  mod.rs  msc.rs  prs.rs  vdac0.rs
pacs/efm32jg12b/src/efm32jg12b500/acmp0/: routeloc0.rs
pacs/efm32jg12b/src/efm32jg12b500/adc0/: scanctrlx.rs  singlectrlx.rs
pacs/efm32jg12b/src/efm32jg12b500/cmu/: ctrl.rs  dbgclksel.rs  dpllctrl.rs  hfbusclken0.rs  hfperclken0.rs  hfxostartupctrl.rs  hfxosteadystatectrl.rs  hfxotimeoutctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  lfaclken0.rs  lfapresc0.rs  routeloc0.rs  routeloc1.rs  routepen.rs  status.rs
pacs/efm32jg12b/src/efm32jg12b500/csen/: prssel.rs
pacs/efm32jg12b/src/efm32jg12b500/emu/: em23pernoretaincmd.rs  em23pernoretainctrl.rs  em23pernoretainstatus.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  pwrcfg.rs  pwrctrl.rs  ram0ctrl.rs  ram1ctrl.rs  ram2ctrl.rs  status.rs
pacs/efm32jg12b/src/efm32jg12b500/etm/: etmitatbctr0.rs  etmpidr0.rs  etmpidr2.rs  ittrigout.rs
pacs/efm32jg12b/src/efm32jg12b500/gpio/: extipselh.rs  extipsell.rs  routeloc1.rs  routepen.rs
pacs/efm32jg12b/src/efm32jg12b500/idac0/: aportreq.rs  ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  status.rs
pacs/efm32jg12b/src/efm32jg12b500/ldma/: ch0_reqsel.rs  ch1_reqsel.rs  ch2_reqsel.rs  ch3_reqsel.rs  ch4_reqsel.rs  ch5_reqsel.rs  ch6_reqsel.rs  ch7_reqsel.rs
pacs/efm32jg12b/src/efm32jg12b500/lesense/: ctrl.rs  decctrl.rs  (+1 more)
(+198 files in other folders)
