[package]
name = "efm32jg12b-pac"
description = "Peripheral access API for EFM32JG12B MCU (generated using svd2rust)"
homepage = "https://github.com/efm32-rs/efm32jg-pacs"
version = "0.1.1"
authors = [ "Vladimir Petrigo <vladimir.petrigo@gmail.com>",]
license = "BSD-3-Clause"
keywords = [ "no-std", "arm", "cortex-m", "efm32",]
categories = [ "embedded", "hardware-support", "no-std",]
repository = "https://github.com/efm32-rs/efm32jg-pacs"
readme = "README.md"
edition = "2021"

[dependencies]
cortex-m = "~0.7"
vcell = "~0.1"

[features]
default = [ "rt",]
rt = [ "cortex-m-rt/device",]
efm32jg12b500 = []

[dependencies.cortex-m-rt]
version = "~0.7"
optional = true

[package.metadata.docs.rs]
features = [ "rt", "efm32jg12b500",]
default-target = "thumbv7m-none-eabi"
targets = []
